# lambda-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  prototype.ipynb  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pipeline.yaml
infra/terraform/: .terraform.lock.hcl  iam.tf  lambda.tf  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: create_lambda_package.sh  create_layers_package.sh  create_packages.sh  deploy.sh
src/lambda-scraper/: lambda.py
