[tool.poetry]
name = "lambda-scraper"
version = "0.1.0"
description = ""
authors = ["mgajewskik <mgajewskik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.35"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
jupyterlab = "^3.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
